--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "build": "webpack"
   },
   "dependencies": {
-    "@foerderfunke/sem-ops-utils": "^0.3.6"
+    "@foerderfunke/sem-ops-utils": "^0.3.7",
+    "grapoi": "^1.1.3",
+    "papaparse": "^5.5.3",
+    "rdf-parser-csvw": "^1.1.0",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "webpack": "^5.103.0",
